[gd_scene load_steps=4 format=3 uid="uid://dubdufllh5nbp"]

[ext_resource type="Script" path="res://scripts/SelectionUI.gd" id="1_j6gme"]
[ext_resource type="FontFile" uid="uid://duwgq1n3s22n" path="res://assets/NotoSansJP-VariableFont_wght.ttf" id="2_2go6i"]
[ext_resource type="Texture2D" uid="uid://cg5b0d5qju83q" path="res://assets/menu_icon.png" id="3_iwd61"]

[node name="SelectionUi" type="Node2D"]
script = ExtResource("1_j6gme")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BackgroundColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.870588, 0.870588, 0.870588, 1)

[node name="MainVBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
custom_minimum_size = Vector2(800, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -196.0
offset_top = -98.5
offset_right = 196.0
offset_bottom = 98.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="QuestionLabel" type="Label" parent="CanvasLayer/MainVBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_2go6i")
theme_override_font_sizes/font_size = 80
text = "What is this?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="QuestionLabelVar" type="Label" parent="CanvasLayer/MainVBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_2go6i")
theme_override_font_sizes/font_size = 80
text = "testchar
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MainVBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 30
alignment = 1

[node name="ButtonA" type="Button" parent="CanvasLayer/MainVBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_2go6i")
theme_override_font_sizes/font_size = 80

[node name="ButtonB" type="Button" parent="CanvasLayer/MainVBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_2go6i")
theme_override_font_sizes/font_size = 80

[node name="ButtonC" type="Button" parent="CanvasLayer/MainVBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_2go6i")
theme_override_font_sizes/font_size = 80

[node name="ButtonD" type="Button" parent="CanvasLayer/MainVBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_2go6i")
theme_override_font_sizes/font_size = 80

[node name="ResultLabel" type="Label" parent="CanvasLayer/MainVBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_2go6i")
theme_override_font_sizes/font_size = 40
text = "results here"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MenuVBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -146.0
offset_top = 63.0
offset_right = -8.0
offset_bottom = 227.0
grow_horizontal = 0

[node name="FlipCheckButton" type="CheckButton" parent="CanvasLayer/MenuVBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_2go6i")
theme_override_font_sizes/font_size = 20
button_pressed = true
text = "Char is Q"

[node name="Hira1CheckButton" type="CheckButton" parent="CanvasLayer/MenuVBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_2go6i")
theme_override_font_sizes/font_size = 20
button_pressed = true
text = "Hiragana1"

[node name="Hira2CheckButton" type="CheckButton" parent="CanvasLayer/MenuVBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_2go6i")
theme_override_font_sizes/font_size = 20
text = "Hiragana2"

[node name="Hira3CheckButton" type="CheckButton" parent="CanvasLayer/MenuVBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_2go6i")
theme_override_font_sizes/font_size = 20
text = "Hiragana3"

[node name="MenuButton" type="Button" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -62.0
offset_top = 9.0
offset_right = 202.0
offset_bottom = 273.0
grow_horizontal = 0
scale = Vector2(0.2, 0.2)
icon = ExtResource("3_iwd61")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="CanvasLayer/MainVBoxContainer/HBoxContainer/ButtonA" to="." method="_on_button_pressed" binds= [0]]
[connection signal="pressed" from="CanvasLayer/MainVBoxContainer/HBoxContainer/ButtonB" to="." method="_on_button_pressed" binds= [1]]
[connection signal="pressed" from="CanvasLayer/MainVBoxContainer/HBoxContainer/ButtonC" to="." method="_on_button_pressed" binds= [2]]
[connection signal="pressed" from="CanvasLayer/MainVBoxContainer/HBoxContainer/ButtonD" to="." method="_on_button_pressed" binds= [3]]
[connection signal="pressed" from="CanvasLayer/MenuVBoxContainer/FlipCheckButton" to="." method="_on_check_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MenuVBoxContainer/Hira1CheckButton" to="." method="_on_check_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MenuVBoxContainer/Hira2CheckButton" to="." method="_on_check_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MenuVBoxContainer/Hira3CheckButton" to="." method="_on_check_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
